<resources>
    <string name="app_name">My ToDo</string>
    <string name="login_to_your_account" translatable="false">Login To Your Account</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="don_t_have_an_account_register" translatable="false">Don\'t have an account? Register</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>

</resources>
